# maintenance

./: .buckconfig  .dockerignore  .gitignore  .trivyignore  BUCK  CHANGELOG.md  DESIGN.md  HANDOFF.md  SPEC.md  gradlew  openapitools.json  package-lock.json  package.json  playwright.config.ts  release-please-config.json  renovate.json5  tsconfig.json
backend/: .dockerignore  .env.example  BUCK  Cargo.toml  Dockerfile  bacon.toml  buck2-rust-admission.json  current-lock-rust-graph.generated.json  deny.toml  reindeer.toml  rust-toolchain.toml
backend/.cargo/: audit.toml
backend/.sqlx/: query-01cc8e01c3befe30f883764a1a11b97a124b47787ed51950cd5d6065420a92f4.json  query-066be74a69b4e3f45a1e7c0cd85896b26ba97059de53ebb5773d6d9d4dfbbec7.json  query-06e70d80d4e7d8f96590795ed48fa43f0c11121df0630e4ac7c5cb937048648c.json  query-0c01dcb3b2d12ce194983e080682372cb9738b4cbf2e35ef0acc01ac19610d1c.json  query-0c207ba1e2f818d30ebf8b0c993b17470e204b2d5df954569158f30ef00f4a08.json  query-0e7459bd54fdc604c27fd9e5b2dd649f646867080deac6dd3088194cbe20298c.json  query-176f756cd232c2edb451b2efa89e0c0fe751fb750ddc0bd780198c7ba6018272.json  query-17cc770f54419eb624e30b54ea9f0daa857e8a1dbecf4c3c0320e046e3e322a2.json  query-1989cc0be6f389d4211ebd23cfa961105f4df7c023b50b0da3acae8881d4d010.json  query-2081bdcf70787cdab55f2df7bbbc076581cba29b6513d45172cf23ad2a234479.json  query-20b6a01698548b3824a648c4ea0ee00e7eaa1045e14649c7c8a690bcb8bd1d23.json  query-23e8905ae8a0b00ab7f157dd83dd15952577dd54443b3445275e66d5fa7419f8.json  query-25f4b24429fb09333c5c874f261be760aa0e4490e2bc88d559ba95d3b089807f.json  query-26c444d7009c56481947c2cae216ef9f41b07373fd99e9abd3244edf85ddba3f.json  query-323a9d73bf46c9db75bded0564a0e02092ade3e459464cf5568d63f8bc1123c4.json  query-3662f59e5f9b44ae991b3f51b982016aeaae77d21073605f48255679ff68284b.json  query-37809d94952031bc3a2fa5e864bd8ff44f54a3b9c3bce6eb7f91da5122121461.json  query-37cf19d29005b40bb20786f9bfc0518adf4d213b30c7f0a0848dc54e9e3f6852.json  query-3b696b4800e8eb6bd781ca640f08a45c870b264b26a6e0b2536df3a904bc823e.json  query-3b7b4148509859773cdcb88db1324b512a4134e383a7bbe6b0aa999c1bbcde49.json  query-3f1dd412183f5695bad2bf4d579ccc641e21190fe84e605274d231fcf4ab76fd.json  query-404c6e5c132ed6981ffdcf6e9f096854291651f8c9309f5b155ce66438ab69ac.json  query-4230aa3dbdde4059f2ef804b5e1eae1e8130f98841dca777fdaa6e9fedbc83f7.json  query-4375af4299f705c581fe4b6db8bcf0def435208145a578e6b36a280a418f4dfd.json  query-4648865d9375fa5fb8790e75df5237b2ea296efd466e4373493f76dccc9c0792.json  query-4a7b7f2edcbd4f9c621d2b5e590a41ea1d26eca8f222a903875e30b9fbdd2939.json  query-4d29193e69149d06ca62df2bc3cbea91a90708a4b845e5067df2853441625bcb.json  query-4e0b18eb4ff0430e0621cebabfa5fe6c43464c5ff3e4ac56ec08c41cf5bf9e05.json  query-50445cf8157580c438be42f3cb5e41130f8bb89a64c8a142970e186777932175.json  query-54c019f6453cd767b36f76e31d27434375c562b9a88ed32895ec39793459268b.json  query-5b97820e4c5cf4dcc5846a426154c72ce1bd717e4b8d708def27067ee04706ec.json  query-5d7ccd8d4267874312eb02ff9b8ff0de07d7deb30bbe797ce1128d2d15e3a35d.json  query-5e2247c921fa4a62e4871c356cc999a887a98a66e99eeb670a8633a05321ad87.json  query-6763d6436b0661498ecb3e8d0a82284bbaef58653502dfe12dac5aa80d9806c5.json  query-68690830ed8b23871ba3ad60fd771fd251fd9343daa1859e4e31289187a119a8.json  query-6b3d22a8243da2fd86e994c73bc9e1bea226a75d30f3da9fc1d3c837805b8134.json  query-6ce4a9f7891abb2452136bef3a9d9065d452490dc7dde0d6f0590838f386f39c.json  query-704294ce11c5e6c120ed1a67f8094be7fe0492322bf806a80d51f59d3b941745.json  query-7084948e4ad9e6ce5238a11cd3a80b62a46384d8c75433cbcee1746e26934f14.json  query-70c4859b08d521cbf8fcfc373800837af4736a07a28fe479b3479ec897ac305a.json  (+29 more)
backend/app/: BUCK  Cargo.toml
backend/app/buck2_contract_tests/: route_surface.rs
backend/app/slos/: api-availability.openslo.yaml  api-latency.openslo.yaml
backend/app/src/: action_inbox.rs  cedar_parity.rs  collaboration.rs  console_telemetry.rs  facilities_schedule.rs  hr.rs  lib.rs  lifecycle.rs  mail_sync.rs  main.rs  objects.rs  office.rs  workbench.rs  workbench_native.rs  workflow_drain.rs  workflow_object_context.rs  workflow_schedules.rs  workflow_studio.rs
backend/app/tests/: action_inbox_api.rs  audit_api.rs  auth_rest.rs  benefit_catalog_api.rs  cedar_freshness_mint.rs  cedar_parity_shadow.rs  cedar_shadow_role_manage.rs  compliance_api.rs  compliance_catalog_api.rs  config.rs  console_kill_switch.rs  console_route_telemetry.rs  consulting_engagement_api.rs  dev_auth_persona_guard.rs  dev_auth_persona_guard_feature.rs  dev_seed_notification_links.rs  dispatch_pipeline_api.rs  equipment_3r_api.rs  facilities_pilot_story.rs  finance_gl_voucher_sod.rs  health_readiness.rs  hr_attendance_manager_scope.rs  hr_attendance_self_read.rs  hr_ingest_checklist_gate.rs  hr_people_create_api.rs  logistics_pilot_story.rs  m2_real_engine_drive.rs  mobile_api.rs  notifications_api.rs  object_graph_api.rs  object_links_api.rs  object_ontology_api.rs  object_resolve_api.rs  office_versions.rs  openapi_drift.rs  openslo_files.rs  platform_onboarding_e2e.rs  production_execution_api.rs  purchase_request_collection_api.rs  realtime_ws.rs  (+17 more)
backend/ci/gates/audit-coverage/: BUCK  Cargo.toml
backend/ci/gates/buck2-coverage/: BUCK  ownership.generated.json  policy.json  semantic_spoof_rule.bzl  test_backend_manifest_coverage.py  test_backend_manifest_coverage_real_buck.py
backend/ci/gates/buck2-rust-graph/: BUCK  test_current_lock_rust_graph.py  test_current_lock_rust_graph_validator.py
backend/ci/gates/dev-auth-absence/: BUCK  Cargo.toml
backend/ci/gates/iac-tier/: BUCK  Cargo.toml
backend/ci/gates/layer-boundary/: BUCK  (+1 more)
backend/fixups/cedar-policy-core/: fixups.toml
backend/fixups/openssl/: fixups.toml
backend/fixups/openssl-sys/: fixups.toml
backend/fixups/ref-cast/: fixups.toml
backend/fixups/rustix/: fixups.toml
backend/fixups/serde_core/: fixups.toml
backend/fixups/serde_derive/: fixups.toml
backend/fixups/zerocopy/: fixups.toml
backend/openapi/: BUCK  openapi.yaml
backend/test_support/: dispatch_worker_fixtures.rs  mobile_evidence_fixtures.rs
(+3818 files in other folders)
