[workspace]
resolver = "3"
# Member globs are added as their first crate lands (an unmatched glob fails the build):
#   "crates/<domain>/*"  mnt-<domain>-{domain,application,adapter-postgres,rest,worker}
#   "crates/platform/*"  mnt-platform-{auth,authz,storage,push,email,realtime,excel}
#   "ci/gates/*"         CI gate binaries (layer-boundary, audit-coverage, ...)
#   "app"                mnt-app composition root
members = [
  "app",
  "crates/kernel/*",
  "crates/compliance/*",
  "crates/financial/*",
  "crates/identity/*",
  "crates/inspection/*",
  "crates/registry/*",
  "crates/reporting/*",
  "crates/sales/*",
  "crates/support/*",
  "crates/workorder/*",
  "crates/messenger/*",
  "crates/comms/*",
  "crates/platform/*",
  "ci/gates/*",
]

[workspace.package]
edition = "2024"
rust-version = "1.96"
license = "LicenseRef-Proprietary"
publish = false

[workspace.dependencies]
# Versions verified live against crates.io at add time (project mandate:
# never from training data). Re-verify on every new `cargo add`.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "serde-well-known", "formatting", "parsing", "macros"] }
# Versions verified live against crates.io 2026-06-12: sqlx 0.9.0, tokio 1.52.3
sqlx = { version = "0.9.0", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "time",
    "json",
    "migrate",
    "macros",
] }
tokio = { version = "1.52.3", default-features = false, features = ["rt-multi-thread", "macros"] }
# Versions verified live against crates.io 2026-06-12:
# reqwest 0.13.4, hmac 0.13.0, sha2 0.11.0, hex 0.4.3,
# url 2.5.8, bytes 1.11.1.
reqwest = { version = "0.13.4", default-features = false }
hmac = "0.13.0"
sha2 = "0.11.0"
hex = "0.4.3"
url = "2.5.8"
bytes = "1.11.1"
# Version verified live against crates.io 2026-06-12: jsonwebtoken 10.4.0.
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto", "use_pem"] }
# apalis 1.0.0-rc.9, apalis-postgres 1.0.0-rc.8, apalis-sql 1.0.0-rc.9.
# No stable apalis 1.0.0 release was available at verification time.
apalis = { version = "=1.0.0-rc.9" }
apalis-postgres = { version = "=1.0.0-rc.8" }
apalis-sql = { version = "=1.0.0-rc.9" }
# Version verified live against crates.io 2026-06-12: calamine 0.35.0
calamine = { version = "0.35.0", features = ["dates"] }
# Magic-number file-type sniffing for evidence content re-validation (the
# downloaded staging bytes are authoritative; the declared content_type is
# advisory). Pure-Rust, no extra runtime binary. Version verified live against
# crates.io 2026-06-23: infer 0.19.0.
infer = { version = "0.19.0", default-features = false, features = ["std"] }
# Versions verified live against crates.io 2026-06-12:
# axum 0.8.9, tower-http 0.7.0, tower 0.5.3, http 1.4.2,
# tracing 0.1.44, tracing-subscriber 0.3.23,
# tracing-opentelemetry 0.33.0, opentelemetry 0.32.0,
# opentelemetry_sdk 0.32.1, opentelemetry-otlp 0.32.0.
axum = "0.8.9"
tower-http = "0.7.0"
tower = "0.5.3"
http = "1.4.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tracing-opentelemetry = "0.33.0"
opentelemetry = "0.32.0"
opentelemetry_sdk = "0.32.1"
opentelemetry-otlp = "0.32.0"
# Prometheus metrics: the `metrics` facade records into a process-global
# recorder; metrics-exporter-prometheus renders the /metrics exposition. Versions
# verified live against the crates.io index. default-features off: we only render
# (no built-in HTTP listener / push-gateway, which would pull extra hyper deps).
metrics = "0.24.6"
metrics-exporter-prometheus = { version = "0.18.3", default-features = false }
# Outbound SMTP for transactional email (OCI Email Delivery relay). Version
# verified live against crates.io 2026-06-22: lettre 0.11.22 (latest stable).
# The workspace ships NO TLS backend (reqwest is default-features = false; no
# rustls/native-tls elsewhere), so lettre MUST bring its own — we select the
# bundled rustls stack via `tokio1-rustls-tls` and disable defaults so no
# system-native TLS (openssl) is pulled in.
lettre = { version = "0.11.22", default-features = false, features = [
    "tokio1-rustls-tls",
    "builder",
    "smtp-transport",
] }
# Webmail credential cipher (envelope AEAD for SMTP/IMAP passwords at rest).
# Versions verified live against the crates.io index 2026-06-23:
#   chacha20poly1305 0.10.1, secrecy 0.10.3, zeroize 1.9.0, base64 0.22.1.
# `chacha20poly1305` 0.10.1 builds on `aead` 0.5, whose `OsRng` (the bundled
# `getrandom` feature, on by default) is the version-matched CSPRNG — we use it
# for per-row DEK + nonce generation rather than adding the standalone `rand`
# crate (rand 0.10 would pull a SECOND, incompatible `rand_core` major). No
# async-imap / tokio-rustls is added in this batch (those land in B-mail-3).
chacha20poly1305 = "0.10.1"
secrecy = "0.10.3"
zeroize = "1.9.0"
base64 = "0.22.1"

mnt-kernel-core = { path = "crates/kernel/core" }
mnt-compliance-domain = { path = "crates/compliance/domain" }
mnt-compliance-application = { path = "crates/compliance/application" }
mnt-compliance-adapter-postgres = { path = "crates/compliance/adapter-postgres" }
mnt-compliance-rest = { path = "crates/compliance/rest" }
mnt-integrity = { path = "crates/compliance/integrity" }
mnt-financial-domain = { path = "crates/financial/domain" }
mnt-financial-application = { path = "crates/financial/application" }
mnt-financial-adapter-postgres = { path = "crates/financial/adapter-postgres" }
mnt-financial-rest = { path = "crates/financial/rest" }
mnt-identity-domain = { path = "crates/identity/domain" }
mnt-identity-application = { path = "crates/identity/application" }
mnt-identity-adapter-postgres = { path = "crates/identity/adapter-postgres" }
mnt-identity-rest = { path = "crates/identity/rest" }
mnt-inspection-domain = { path = "crates/inspection/domain" }
mnt-inspection-application = { path = "crates/inspection/application" }
mnt-inspection-adapter-postgres = { path = "crates/inspection/adapter-postgres" }
mnt-inspection-rest = { path = "crates/inspection/rest" }
mnt-support-domain = { path = "crates/support/domain" }
mnt-support-application = { path = "crates/support/application" }
mnt-support-adapter-postgres = { path = "crates/support/adapter-postgres" }
mnt-support-rest = { path = "crates/support/rest" }
mnt-sales-domain = { path = "crates/sales/domain" }
mnt-sales-application = { path = "crates/sales/application" }
mnt-sales-adapter-postgres = { path = "crates/sales/adapter-postgres" }
mnt-sales-rest = { path = "crates/sales/rest" }
mnt-registry-domain = { path = "crates/registry/domain" }
mnt-registry-application = { path = "crates/registry/application" }
mnt-reporting-domain = { path = "crates/reporting/domain" }
mnt-reporting-application = { path = "crates/reporting/application" }
mnt-reporting-adapter-postgres = { path = "crates/reporting/adapter-postgres" }
mnt-reporting-rest = { path = "crates/reporting/rest" }
mnt-registry-adapter-postgres = { path = "crates/registry/adapter-postgres" }
mnt-registry-rest = { path = "crates/registry/rest" }
mnt-workorder-domain = { path = "crates/workorder/domain" }
mnt-workorder-application = { path = "crates/workorder/application" }
mnt-workorder-adapter-postgres = { path = "crates/workorder/adapter-postgres" }
mnt-workorder-rest = { path = "crates/workorder/rest" }
mnt-messenger-domain = { path = "crates/messenger/domain" }
mnt-messenger-application = { path = "crates/messenger/application" }
mnt-messenger-adapter-postgres = { path = "crates/messenger/adapter-postgres" }
mnt-messenger-rest = { path = "crates/messenger/rest" }
mnt-comms-domain = { path = "crates/comms/domain" }
mnt-comms-credential-cipher = { path = "crates/comms/credential-cipher" }
mnt-dispatch-domain = { path = "crates/dispatch/domain" }
mnt-dispatch-application = { path = "crates/dispatch/application" }
mnt-dispatch-adapter-postgres = { path = "crates/dispatch/adapter-postgres" }
mnt-dispatch-rest = { path = "crates/dispatch/rest" }
mnt-dispatch-worker = { path = "crates/dispatch/worker" }
mnt-platform-db = { path = "crates/platform/db" }
mnt-platform-auth = { path = "crates/platform/auth" }
mnt-platform-auth-rest = { path = "crates/platform/auth-rest" }
mnt-platform-authz = { path = "crates/platform/authz" }
mnt-platform-request-context = { path = "crates/platform/request-context" }
mnt-platform-realtime = { path = "crates/platform/realtime" }
mnt-platform-excel = { path = "crates/platform/excel" }
mnt-platform-storage = { path = "crates/platform/storage" }
mnt-platform-jobs = { path = "crates/platform/jobs" }
mnt-platform-push = { path = "crates/platform/push" }
mnt-platform-email = { path = "crates/platform/email" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
