[workspace]
resolver = "3"
# Member globs are added as their first crate lands (an unmatched glob fails the build):
#   "crates/<domain>/*"  mnt-<domain>-{domain,application,adapter-postgres,rest,worker}
#   "crates/platform/*"  mnt-platform-{auth,authz,storage,push,email,realtime,excel}
#   "ci/gates/*"         CI gate binaries (layer-boundary, audit-coverage, ...)
#   "app"                mnt-app composition root
members = [
  "app",
  "crates/action-inbox/*",
  "crates/kernel/*",
  "crates/benefit/*",
  "crates/compliance/*",
  "crates/docs/*",
  "crates/financial/*",
  "crates/finance-gl/*",
  "crates/governance/*",
  "crates/identity/*",
  "crates/inspection/*",
  "crates/inventory/*",
  "crates/logistics/*",
  "crates/ontology/*",
  "crates/registry/*",
  "crates/reporting/*",
  "crates/sales/*",
  "crates/support/*",
  "crates/workorder/*",
  "crates/workflow/*",
  "crates/messenger/*",
  "crates/notifications/*",
  "crates/notices/*",
  "crates/inbox/*",
  "crates/leave/*",
  "crates/todos/*",
  "crates/comms/*",
  "crates/payroll/*",
  "crates/production/*",
  "crates/policy/*",
  "crates/erp/*",
  "crates/platform/*",
  "crates/analytics-quant/*",
  "ci/gates/*",
]

[workspace.package]
edition = "2024"
rust-version = "1.96"
license = "LicenseRef-Proprietary"
publish = false

[workspace.dependencies]
# Versions verified live against crates.io at add time (project mandate:
# never from training data). Re-verify on every new `cargo add`.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "serde-well-known", "formatting", "parsing", "macros"] }
# Versions verified live against crates.io 2026-06-12: sqlx 0.9.0, tokio 1.52.3
sqlx = { version = "0.9.0", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "time",
    "json",
    "migrate",
    "macros",
] }
tokio = { version = "1.52.3", default-features = false, features = ["rt-multi-thread", "macros"] }
# Versions verified live against crates.io 2026-06-12:
# reqwest 0.13.4, hmac 0.13.0, sha2 0.11.0, hex 0.4.3,
# url 2.5.8, bytes 1.11.1.
reqwest = { version = "0.13.4", default-features = false }
hmac = "0.13.0"
sha2 = "0.11.0"
hex = "0.4.3"
url = "2.5.8"
bytes = "1.11.1"
# Version verified live against crates.io 2026-06-12: jsonwebtoken 10.4.0.
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto", "use_pem"] }
# apalis 1.0.0-rc.9, apalis-postgres 1.0.0-rc.8, apalis-sql 1.0.0-rc.9.
# No stable apalis 1.0.0 release was available at verification time.
apalis = { version = "=1.0.0-rc.9" }
apalis-postgres = { version = "=1.0.0-rc.8" }
apalis-sql = { version = "=1.0.0-rc.9" }
# Version verified live against crates.io 2026-06-12: calamine 0.35.0
calamine = { version = "0.35.0", features = ["dates"] }
# Magic-number file-type sniffing for evidence content re-validation (the
# downloaded staging bytes are authoritative; the declared content_type is
# advisory). Pure-Rust, no extra runtime binary. Version verified live against
# crates.io 2026-06-23: infer 0.19.0.
infer = { version = "0.19.0", default-features = false, features = ["std"] }
# Cron parsing/evaluation for workflow_schedules (BE-AUTO). Versions verified
# live against crates.io 2026-07-08: croner 3.0.1, chrono 0.4.45,
# chrono-tz 0.10.4 (croner evaluates over chrono types; chrono-tz supplies the
# IANA timezone the schedule's cron pattern is interpreted in — 매일 아침 9시
# must mean 09:00 KST, not UTC). chrono was already in the lockfile
# transitively; `time` stays the workspace-wide datetime type and chrono is
# confined to the cron boundary.
croner = "3.0.1"
chrono = { version = "0.4.45", default-features = false, features = ["std"] }
chrono-tz = "0.10.4"
# Versions verified live against crates.io 2026-06-12:
# axum 0.8.9, tower-http 0.7.0, tower 0.5.3, http 1.4.2,
# tracing 0.1.44, tracing-subscriber 0.3.23,
# tracing-opentelemetry 0.33.0, opentelemetry 0.32.0,
# opentelemetry_sdk 0.32.1, opentelemetry-otlp 0.32.0.
axum = "0.8.9"
tower-http = "0.7.0"
tower = "0.5.3"
http = "1.4.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tracing-opentelemetry = "0.33.0"
opentelemetry = "0.32.0"
opentelemetry_sdk = "0.32.1"
opentelemetry-otlp = "0.32.0"
# Prometheus metrics: the `metrics` facade records into a process-global
# recorder; metrics-exporter-prometheus renders the /metrics exposition. Versions
# verified live against the crates.io index. default-features off: we only render
# (no built-in HTTP listener / push-gateway, which would pull extra hyper deps).
metrics = "0.24.6"
metrics-exporter-prometheus = { version = "0.18.3", default-features = false }
# Outbound SMTP for transactional email (OCI Email Delivery relay). Version
# verified live against crates.io 2026-06-22: lettre 0.11.22 (latest stable).
# The workspace ships NO TLS backend (reqwest is default-features = false; no
# rustls/native-tls elsewhere), so lettre MUST bring its own — we select the
# bundled rustls stack via `tokio1-rustls-tls` and disable defaults so no
# system-native TLS (openssl) is pulled in.
lettre = { version = "0.11.22", default-features = false, features = [
    "tokio1-rustls-tls",
    "builder",
    "smtp-transport",
] }
# Webmail credential cipher (envelope AEAD for SMTP/IMAP passwords at rest).
# Versions verified live against the crates.io index 2026-06-23:
#   chacha20poly1305 0.10.1, secrecy 0.10.3, zeroize 1.9.0, base64 0.22.1.
# `chacha20poly1305` 0.10.1 builds on `aead` 0.5, whose `OsRng` (the bundled
# `getrandom` feature, on by default) is the version-matched CSPRNG — we use it
# for per-row DEK + nonce generation rather than adding the standalone `rand`
# crate (rand 0.10 would pull a SECOND, incompatible `rand_core` major). No
# async-imap / tokio-rustls is added in this batch (those land in B-mail-3).
chacha20poly1305 = "0.10.1"
secrecy = "0.10.3"
zeroize = "1.9.0"
base64 = "0.22.1"
subtle = "2.6.1"
# SSRF guard for outbound webmail connections (B-mail-2). Versions verified live
# against the crates.io index 2026-06-23: hickory-resolver 0.26.1 (latest
# stable), ipnet 2.12.0 (latest stable). The resolver gives us a resolve-once,
# validate-the-IP, then dial-the-pinned-IP path (DNS-rebinding safe); ipnet
# matches the resolved IP against the RFC1918 / loopback / link-local / ULA /
# CGNAT denylist. hickory-resolver brings its own tokio runtime integration and
# does NOT add a second rustls stack (it speaks plain UDP/TCP DNS by default).
hickory-resolver = "0.26.1"
ipnet = "2.12.0"
# Inbound IMAP sync (B-mail-3). Versions verified live against the crates.io
# index 2026-06-23: async-imap 0.11.2, mail-parser 0.11.4, tokio-rustls 0.26.4,
# rustls 0.23 (workspace already resolves 0.23.x via lettre's tokio1-rustls-tls),
# webpki-roots 1.0.8, futures 0.3.32.
#
# R1 SINGLE-STACK GATE: `async-imap` is TLS-AGNOSTIC — it speaks IMAP over any
# `tokio::io::AsyncRead + AsyncWrite` (feature `runtime-tokio`, default off so
# `async-std` is never pulled). We supply the TLS layer ourselves with
# `tokio-rustls` 0.26 on `rustls` 0.23 + the `ring` provider — the EXACT rustls
# major/minor + ring that `lettre 0.11.22`'s `tokio1-rustls-tls` already pulls,
# so `cargo tree -d` stays single-stack (one rustls, one ring, no native-tls /
# openssl). `mail-parser` is the inbound MIME parser; both appear ONLY in
# `mnt-comms-adapter-imap`.
async-imap = { version = "0.11.2", default-features = false, features = ["runtime-tokio"] }
mail-parser = "0.11.4"
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = "1.0.8"
futures = { version = "0.3.32", default-features = false, features = ["std"] }

mnt-kernel-core = { path = "crates/kernel/core" }
mnt-action-inbox-application = { path = "crates/action-inbox/application" }
mnt-benefit-domain = { path = "crates/benefit/domain" }
mnt-benefit-application = { path = "crates/benefit/application" }
mnt-benefit-adapter-postgres = { path = "crates/benefit/adapter-postgres" }
mnt-benefit-rest = { path = "crates/benefit/rest" }
mnt-compliance-domain = { path = "crates/compliance/domain" }
mnt-compliance-application = { path = "crates/compliance/application" }
mnt-compliance-adapter-postgres = { path = "crates/compliance/adapter-postgres" }
mnt-compliance-rest = { path = "crates/compliance/rest" }
mnt-integrity = { path = "crates/compliance/integrity" }
mnt-docs-domain = { path = "crates/docs/domain" }
mnt-docs-application = { path = "crates/docs/application" }
mnt-docs-adapter-postgres = { path = "crates/docs/adapter-postgres" }
mnt-docs-rest = { path = "crates/docs/rest" }
mnt-financial-domain = { path = "crates/financial/domain" }
mnt-financial-application = { path = "crates/financial/application" }
mnt-financial-adapter-postgres = { path = "crates/financial/adapter-postgres" }
mnt-financial-rest = { path = "crates/financial/rest" }
mnt-finance-gl-domain = { path = "crates/finance-gl/domain" }
mnt-finance-gl-application = { path = "crates/finance-gl/application" }
mnt-finance-gl-adapter-postgres = { path = "crates/finance-gl/adapter-postgres" }
mnt-finance-gl-rest = { path = "crates/finance-gl/rest" }
mnt-identity-domain = { path = "crates/identity/domain" }
mnt-identity-application = { path = "crates/identity/application" }
mnt-identity-adapter-postgres = { path = "crates/identity/adapter-postgres" }
mnt-identity-rest = { path = "crates/identity/rest" }
mnt-inspection-domain = { path = "crates/inspection/domain" }
mnt-inspection-application = { path = "crates/inspection/application" }
mnt-inspection-adapter-postgres = { path = "crates/inspection/adapter-postgres" }
mnt-inspection-rest = { path = "crates/inspection/rest" }
mnt-inventory-domain = { path = "crates/inventory/domain" }
mnt-inventory-application = { path = "crates/inventory/application" }
mnt-inventory-adapter-postgres = { path = "crates/inventory/adapter-postgres" }
mnt-logistics-domain = { path = "crates/logistics/domain" }
mnt-logistics-application = { path = "crates/logistics/application" }
mnt-logistics-adapter-postgres = { path = "crates/logistics/adapter-postgres" }
mnt-logistics-rest = { path = "crates/logistics/rest" }
mnt-support-domain = { path = "crates/support/domain" }
mnt-support-application = { path = "crates/support/application" }
mnt-support-adapter-postgres = { path = "crates/support/adapter-postgres" }
mnt-support-rest = { path = "crates/support/rest" }
mnt-sales-domain = { path = "crates/sales/domain" }
mnt-sales-application = { path = "crates/sales/application" }
mnt-sales-adapter-postgres = { path = "crates/sales/adapter-postgres" }
mnt-sales-rest = { path = "crates/sales/rest" }
mnt-registry-domain = { path = "crates/registry/domain" }
mnt-registry-application = { path = "crates/registry/application" }
mnt-reporting-domain = { path = "crates/reporting/domain" }
mnt-reporting-application = { path = "crates/reporting/application" }
mnt-reporting-adapter-postgres = { path = "crates/reporting/adapter-postgres" }
mnt-reporting-rest = { path = "crates/reporting/rest" }
mnt-analytics-quant-service = { path = "crates/analytics-quant/service" }
mnt-analytics-quant-rest = { path = "crates/analytics-quant/rest" }
mnt-registry-adapter-postgres = { path = "crates/registry/adapter-postgres" }
mnt-registry-rest = { path = "crates/registry/rest" }
mnt-workorder-domain = { path = "crates/workorder/domain" }
mnt-workorder-application = { path = "crates/workorder/application" }
mnt-workorder-adapter-postgres = { path = "crates/workorder/adapter-postgres" }
mnt-workorder-rest = { path = "crates/workorder/rest" }
mnt-production-rest = { path = "crates/production/rest" }
mnt-workflow-domain = { path = "crates/workflow/domain" }
mnt-workflow-runtime = { path = "crates/workflow/runtime" }
mnt-workflow-runtime-adapter-postgres = { path = "crates/workflow/adapter-postgres" }
mnt-messenger-domain = { path = "crates/messenger/domain" }
mnt-messenger-application = { path = "crates/messenger/application" }
mnt-messenger-adapter-postgres = { path = "crates/messenger/adapter-postgres" }
mnt-messenger-rest = { path = "crates/messenger/rest" }
mnt-notifications-domain = { path = "crates/notifications/domain" }
mnt-notifications-application = { path = "crates/notifications/application" }
mnt-notifications-adapter-postgres = { path = "crates/notifications/adapter-postgres" }
mnt-notifications-rest = { path = "crates/notifications/rest" }
mnt-notices-domain = { path = "crates/notices/domain" }
mnt-notices-application = { path = "crates/notices/application" }
mnt-notices-adapter-postgres = { path = "crates/notices/adapter-postgres" }
mnt-notices-rest = { path = "crates/notices/rest" }
mnt-inbox-domain = { path = "crates/inbox/domain" }
mnt-inbox-application = { path = "crates/inbox/application" }
mnt-inbox-adapter-postgres = { path = "crates/inbox/adapter-postgres" }
mnt-inbox-rest = { path = "crates/inbox/rest" }
mnt-leave-domain = { path = "crates/leave/domain" }
mnt-leave-application = { path = "crates/leave/application" }
mnt-leave-adapter-postgres = { path = "crates/leave/adapter-postgres" }
mnt-leave-rest = { path = "crates/leave/rest" }
mnt-todos-domain = { path = "crates/todos/domain" }
mnt-todos-application = { path = "crates/todos/application" }
mnt-todos-adapter-postgres = { path = "crates/todos/adapter-postgres" }
mnt-todos-rest = { path = "crates/todos/rest" }
mnt-comms-domain = { path = "crates/comms/domain" }
mnt-comms-credential-cipher = { path = "crates/comms/credential-cipher" }
mnt-comms-application = { path = "crates/comms/application" }
mnt-comms-adapter-postgres = { path = "crates/comms/adapter-postgres" }
mnt-comms-adapter-smtp = { path = "crates/comms/adapter-smtp" }
mnt-comms-adapter-imap = { path = "crates/comms/adapter-imap" }
mnt-comms-adapter-mox = { path = "crates/comms/adapter-mox" }
mnt-comms-mailbox = { path = "crates/comms/mailbox" }
mnt-comms-rest = { path = "crates/comms/rest" }
mnt-payroll-domain = { path = "crates/payroll/domain" }
mnt-payroll-adapter-postgres = { path = "crates/payroll/adapter-postgres" }
mnt-payroll-rest = { path = "crates/payroll/rest" }
mnt-policy-domain = { path = "crates/policy/domain" }
mnt-policy-application = { path = "crates/policy/application" }
mnt-policy-adapter-postgres = { path = "crates/policy/adapter-postgres" }
mnt-erp-domain = { path = "crates/erp/domain" }
mnt-dispatch-domain = { path = "crates/dispatch/domain" }
mnt-dispatch-application = { path = "crates/dispatch/application" }
mnt-dispatch-adapter-postgres = { path = "crates/dispatch/adapter-postgres" }
mnt-dispatch-rest = { path = "crates/dispatch/rest" }
mnt-dispatch-worker = { path = "crates/dispatch/worker" }
mnt-platform-db = { path = "crates/platform/db" }
mnt-platform-auth = { path = "crates/platform/auth" }
mnt-platform-auth-rest = { path = "crates/platform/auth-rest" }
mnt-platform-authz = { path = "crates/platform/authz" }
mnt-platform-authz-rest = { path = "crates/platform/authz-rest" }
mnt-ontology-domain = { path = "crates/ontology/domain" }
mnt-ontology-application = { path = "crates/ontology/application" }
mnt-ontology-adapter-postgres = { path = "crates/ontology/adapter-postgres" }
mnt-ontology-rest = { path = "crates/ontology/rest" }
mnt-governance-domain = { path = "crates/governance/domain" }
mnt-governance-application = { path = "crates/governance/application" }
mnt-governance-adapter-postgres = { path = "crates/governance/adapter-postgres" }
mnt-governance-rest = { path = "crates/governance/rest" }
mnt-platform-request-context = { path = "crates/platform/request-context" }
mnt-platform-realtime = { path = "crates/platform/realtime" }
mnt-platform-excel = { path = "crates/platform/excel" }
mnt-platform-storage = { path = "crates/platform/storage" }
mnt-platform-jobs = { path = "crates/platform/jobs" }
mnt-platform-push = { path = "crates/platform/push" }
mnt-platform-email = { path = "crates/platform/email" }
mnt-platform-test-support = { path = "crates/platform/test-support" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[patch.crates-io]
# Temporary RUSTSEC-2026-0194/RUSTSEC-2026-0195 unblock: upstream calamine
# 0.35.0 and umya-spreadsheet 3.0.0 still constrain quick-xml below the fixed
# 0.41 line. The audited source lives under the repository's Rust third-party
# boundary so Cargo, Reindeer, Buck2, and the image build consume one copy.
# Remove these patches once crates.io can resolve quick-xml >=0.41 without
# local compatibility shims.
calamine = { path = "../third-party/rust/vendor/calamine-0.35.0-quickxml41" }
quick-xml = { path = "../third-party/rust/vendor/quick-xml-0.41.0-compat" }
umya-spreadsheet = { path = "../third-party/rust/vendor/umya-spreadsheet-3.0.0-quickxml41" }
