[package]
name = "mnt-app"
version = "0.1.0"
description = "Composition root binary for the maintenance FSM backend."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "mnt-app"
path = "src/main.rs"

[lib]
name = "mnt_app"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
http = { workspace = true }
mnt-financial-adapter-postgres = { workspace = true }
mnt-financial-rest = { workspace = true }
mnt-inspection-adapter-postgres = { workspace = true }
mnt-inspection-rest = { workspace = true }
mnt-kernel-core = { workspace = true }
mnt-messenger-adapter-postgres = { workspace = true }
mnt-messenger-rest = { workspace = true }
mnt-platform-auth = { path = "../crates/platform/auth" }
mnt-platform-auth-rest = { workspace = true }
mnt-platform-authz = { path = "../crates/platform/authz" }
mnt-platform-db = { workspace = true }
mnt-platform-jobs = { workspace = true }
mnt-platform-push = { workspace = true }
mnt-platform-realtime = { workspace = true }
mnt-platform-storage = { workspace = true }
mnt-reporting-adapter-postgres = { workspace = true }
mnt-reporting-rest = { workspace = true }
mnt-registry-adapter-postgres = { workspace = true }
mnt-registry-rest = { workspace = true }
mnt-dispatch-adapter-postgres = { workspace = true }
mnt-dispatch-domain = { workspace = true }
mnt-dispatch-rest = { workspace = true }
mnt-dispatch-worker = { workspace = true }
mnt-workorder-adapter-postgres = { workspace = true }
mnt-workorder-rest = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic"] }
opentelemetry_sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["net", "signal", "time"] }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
uuid = { workspace = true }

[dev-dependencies]
mnt-platform-provisioning = { path = "../crates/platform/provisioning" }
p256 = { version = "0.13.2", features = ["ecdsa", "pkcs8", "pem"] }
tokio = { workspace = true, features = ["io-util", "net", "macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }
url = "2.5.8"
webauthn-authenticator-rs = { version = "0.5.5", features = ["softpasskey"] }
webauthn-rs = { version = "0.5.5", features = ["danger-allow-state-serialisation"] }

[lints]
workspace = true
