[package]
name = "mnt-app"
version = "0.1.0"
description = "Composition root binary for the maintenance FSM backend."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "mnt-app"
path = "src/main.rs"

[lib]
name = "mnt_app"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
http = { workspace = true }
mnt-comms-adapter-imap = { workspace = true }
mnt-comms-adapter-postgres = { workspace = true }
mnt-comms-application = { workspace = true }
mnt-comms-credential-cipher = { workspace = true }
mnt-comms-rest = { workspace = true }
mnt-compliance-adapter-postgres = { workspace = true }
mnt-compliance-rest = { workspace = true }
mnt-integrity = { workspace = true }
mnt-financial-adapter-postgres = { workspace = true }
mnt-financial-rest = { workspace = true }
mnt-identity-adapter-postgres = { workspace = true }
mnt-identity-rest = { workspace = true }
mnt-inspection-adapter-postgres = { workspace = true }
mnt-inspection-rest = { workspace = true }
mnt-support-adapter-postgres = { workspace = true }
mnt-support-rest = { workspace = true }
mnt-sales-adapter-postgres = { workspace = true }
mnt-sales-rest = { workspace = true }
mnt-kernel-core = { workspace = true }
mnt-messenger-adapter-postgres = { workspace = true }
mnt-messenger-rest = { workspace = true }
mnt-platform-auth = { path = "../crates/platform/auth" }
mnt-platform-auth-rest = { workspace = true }
mnt-platform-authz = { path = "../crates/platform/authz" }
mnt-platform-request-context = { workspace = true }
mnt-platform-db = { workspace = true }
mnt-platform-email = { workspace = true }
mnt-platform-jobs = { workspace = true }
mnt-platform-provisioning = { path = "../crates/platform/provisioning" }
mnt-platform-rest = { path = "../crates/platform/platform-rest" }
mnt-platform-push = { workspace = true }
mnt-platform-realtime = { workspace = true }
mnt-platform-storage = { workspace = true }
mnt-reporting-adapter-postgres = { workspace = true }
mnt-reporting-rest = { workspace = true }
mnt-registry-adapter-postgres = { workspace = true }
mnt-registry-rest = { workspace = true }
mnt-dispatch-adapter-postgres = { workspace = true }
mnt-dispatch-domain = { workspace = true }
mnt-dispatch-rest = { workspace = true }
mnt-dispatch-worker = { workspace = true }
mnt-workorder-adapter-postgres = { workspace = true }
mnt-workorder-rest = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic"] }
opentelemetry_sdk = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["net", "signal", "sync", "time"] }
tower-http = { workspace = true, features = ["timeout", "trace"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
uuid = { workspace = true }

[dev-dependencies]
p256 = { version = "0.13.2", features = ["ecdsa", "pkcs8", "pem"] }
tokio = { workspace = true, features = ["io-util", "net", "macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }
url = "2.5.8"
webauthn-authenticator-rs = { version = "0.5.5", features = ["softpasskey"] }
webauthn-rs = { version = "0.5.5", features = ["danger-allow-state-serialisation"] }

[lints]
workspace = true
